ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Opportunity_Pledge__c/CnP_PaaS__Opportunity_Pledge__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Opportunity Pledge</label>
    <nameField>
        <label>Opportunity Pledge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Opportunity Pledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>