ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Opportunity_Pledge__c/fields/CnP_PaaS__Pledge__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Pledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Pledge</label>
    <referenceTo>CnP_PaaS__Pledge__c</referenceTo>
    <relationshipName>Opportunity_Pledge</relationshipName>
    <type>Lookup</type>
</CustomField>